--- a/sathwik portfolio.html
+++ b/sathwik portfolio.html
@@ -44,7 +44,9 @@
                 <div class="content">
                     <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Hey I'm <span>Amelia</span></h1>
                     <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900">I'm a <span></span></div>
-                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, perferendis quas consectetur possimus maxime consequatur cupiditate eos dolorum molestias praesentium error exercitationem rem labore illo, in dolor, odio corporis excepturi?</p>
+                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Hello! I'm Sathwik, a passionate Computer Science Engineering student with a deep interest in Artificial Intelligence and Java Full Stack Development. I love building smart, creative projects and always stay curious about learning new technologies.
+
+I'm currently seeking opportunities at top companies to apply my skills and grow in the tech world. I’m dedicated, hardworking, and always up for a challenge!</p>
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1200">
                         <a href="#" ><i class="fa-brands fa-github"></i></a>
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
