--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 I'm currently seeking opportunities at top companies to apply my skills and grow in the tech world. I’m dedicated, hardworking, and always up for a challenge!</p>
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1200">
-                        <a href="#" ><i class="fa-brands fa-github"></i></a>
+                        <a href="https://github.com/psathwik-AIML" ><i class="fa-brands fa-github"></i></a>
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
