--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I'm currently seeking opportunities at top companies to apply my skills and grow
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-delay="1200">
                         <a href="https://github.com/psathwik-AIML" ><i class="fa-brands fa-github"></i></a>
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/sunny31/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                     <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="1300">
