--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="content">
                     <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">Hey I'm <span>Sathwik</span></h1>
-                    <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900">I'm a <span>Final year student</span></div>
+                    <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="900">I'm a <span></span></div>
                     <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Hello! I'm Sathwik, a passionate Computer Science Engineering student with a deep interest in Artificial Intelligence and Java Full Stack Development. I love building smart, creative projects and always stay curious about learning new technologies.
 
 I'm currently seeking opportunities at top companies to apply my skills and grow in the tech world. I’m dedicated, hardworking, and always up for a challenge!</p>
